create controller for leave application
